test/typechecker.d/valid/match3.surc
match3(dox: Integer): Integer = match dox
	3 -> 3
	n -> 4: Integer
