test/typechecker.d/invalid/match5.surc
match4(dox: Integer): Char = match dox: Integer
	3 -> 4
	n -> 6
